--- a/frontend/src/app/modules/landing/home/home.component.html
+++ b/frontend/src/app/modules/landing/home/home.component.html
@@ -19,17 +19,9 @@
             </p>
         </div>
         <div>
-            <a
-                class="mt-8"
-                mat-flat-button
-                [color]="'primary'"
-                [routerLink]="'/dashboards/project'"
-            >
+            <a class="mt-8" mat-flat-button [color]="'primary'" [routerLink]="'/dashboards/project'">
                 <span>Launch the App</span>
-                <mat-icon
-                    class="ml-2 icon-size-5"
-                    [svgIcon]="'heroicons_mini:arrow-long-right'"
-                ></mat-icon>
+                <mat-icon class="ml-2 icon-size-5" [svgIcon]="'heroicons_mini:arrow-long-right'"></mat-icon>
             </a>
         </div>
     </div>
